--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --passWithNoTests",
+    "test: whatch": "npm jest --  --whath",
+    "test: staged": "npm jest --  --findRelatedTests",
+    "test: ci": "npm jest --  --coverage"
   },
   "repository": {
     "type": "git",
