feat: ensure RemoteAuthenticationthrows InvalidCredentials

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clear_jest": "jest --clearCache",
     "test": "jest --passWithNoTests",
     "test:watch": "npm test --  --watch",
     "test:staged": "npm test --  --findRelatedTests",
