--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/KelsonMaciel/Clean-code-React#readme",
   "devDependencies": {
     "@babel/preset-typescript": "^7.12.1",
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
@@ -40,5 +41,8 @@
     "lint-staged": "^10.4.1",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "axios": "^0.21.0"
   }
 }
