--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.10",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "eslint": "^7.11.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
@@ -43,6 +45,8 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "axios": "^0.21.0"
+    "axios": "^0.21.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
