--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server  --open",
     "clear_jest": "jest --clearCache",
-    "test": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test --  --watch",
     "test:staged": "npm test --  --findRelatedTests",
     "test:ci": "npm test --  --coverage"
@@ -30,6 +31,7 @@
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.11.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "^2.22.1",
