--- a/package.json
+++ b/package.json
@@ -32,18 +32,25 @@
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.0",
     "eslint": "^7.11.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^5.1.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.3",
     "lint-staged": "^10.4.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.0.4",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.4.1",
+    "ts-loader": "^8.0.7",
     "typescript": "^4.0.3",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
