--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server  --open",
     "clear_jest": "jest --clearCache",
-    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test": "jest --passWithNoTests",
     "test:watch": "npm test --  --watch",
     "test:staged": "npm test --  --findRelatedTests",
     "test:ci": "npm test --  --coverage"
