--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server  --open",
+    "start": "webpack serve",
     "clear_jest": "jest --clearCache",
-    "test": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test --  --watch",
     "test:staged": "npm test --  --findRelatedTests",
     "test:ci": "npm test --  --coverage"
@@ -46,7 +46,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.3",
     "lint-staged": "^10.4.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.4.1",
